Protect against CSRF Attacks
Protect by generating a unique token and placing it in session, each time a user requests an HTML form which will generate an unsafe HTTP request (POST, PUT, DELETE). Make sure to verify the token when the form is submitted.

--- a/securitywebapp/src/webapp/templates/createpost.twig
+++ b/securitywebapp/src/webapp/templates/createpost.twig
@@ -5,6 +5,7 @@
     <h2>Create post</h2>
 
     <form action="" method="POST">
+        <input type="text" name="csrf_token" value="{{ csrf_token }}" hidden="true">
         <div id="flasherror">{{ flash.error }}</div>
 
         <label>Title:</label>
