--- a/securitywebapp/src/webapp/templates/forgotPasswordConfirm.twig
+++ b/securitywebapp/src/webapp/templates/forgotPasswordConfirm.twig
@@ -9,9 +9,10 @@
 <h3>Username: {{ user.username}}</h3>
 
     <form action="" method="POST">
+        <input type="text" name="csrf_token" value="{{ csrf_token }}" hidden="true">
         <label>Is this information correct? </label>
         <br>
-        <input type = "hidden" name = "username" value = "{{ user.username }}">
+        <input type = "hidden" name = "username" value = "{{ username }}">
         <input type="submit" name="trueInformation" value="This information is correct" title = "YES!"> <br />
     </form>
 
