--- a/securitywebapp/src/webapp/templates/base.twig
+++ b/securitywebapp/src/webapp/templates/base.twig
@@ -43,7 +43,7 @@
             </div>
 
             <div id="content">
-                <div id="flashinfo">{{ flash.info|raw }}</div>
+                <div id="flashinfo">{{ flash.info }}</div>
                 {% block content %}{% endblock %}
             </div>
         </div>
