--- a/securitywebapp/src/webapp/templates/edituser.twig
+++ b/securitywebapp/src/webapp/templates/edituser.twig
@@ -5,6 +5,7 @@
     <h2>Edit profile</h2>
 
     <form action="" method="POST">
+        <input type="text" name="csrf_token" value="{{ csrf_token }}" hidden="true">
         <div id="flasherror">{{ flash.error }}</div>
 
         <label>Full name:</label>
