--- a/securitywebapp/src/webapp/templates/forgotPassword.twig
+++ b/securitywebapp/src/webapp/templates/forgotPassword.twig
@@ -6,6 +6,7 @@
 <h2> Please input your username </h2>
 {{ flash.error}}
 <form action="" method="POST">
+    <input type="text" name="csrf_token" value="{{ csrf_token }}" hidden="true">
     <label>Username: </label>
     <input type="text" name="username"> <br />
     <input type="submit" name="submit" value="Submit">
