--- a/securitywebapp/src/webapp/templates/login.twig
+++ b/securitywebapp/src/webapp/templates/login.twig
@@ -7,6 +7,7 @@
 {{ flash.error}} <br />
 {{ flash.success }}
 <form action="" method="POST">
+<input type="text" name="csrf_token" value="{{ csrf_token }}" hidden="true">
 
 <label>Username: </label>
 <input type="text" name="user"> <br />
